[project]
name = "music-favorites-export"
version = "1.0.0"
description = "Export YouTube Music & Deezer favorites to JSON — ready for SpotiFLAC-Next/deemix FLAC download"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ytmusicapi>=1.0",
    "requests>=2.28",
    "rookiepy==0.5.5",
]

[project.scripts]
music-export = "export:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
package = true
